@@ -1,4 +1,4 @@
 DIST plexus-container-default-1.0.tar.bz2 79731 RMD160 eebd20ccd0a93f4ea78469f9f3917473256d36ae SHA1 9e1f30a6ddce27ff2de94c6a7cc2aa0f5f36e688 SHA256 cfbeb0ab77ef4134727c52c1c7b96eb8d2aa6d2070946a7e58176af28b9bdc2e
-EBUILD plexus-container-default-1.0.ebuild 743 RMD160 0de5a96361ecd7cfba59c67589fe1b6de69ab002 SHA1 431a049e8dede2060501405a02ddf035288b400f SHA256 68424c802a9881329559421993558dc6fd33442b6905cef70159f1dfc14de56a
-MISC ChangeLog 252 RMD160 0580b1f481d1b50b4bd9af00121e442a80a03c88 SHA1 fad5aef718cff3f5ad5bf738f9e9ef4e956ca0a3 SHA256 b59a80180cf15a81bce8137902ccf26e7ee928e7cd96e0ae9f1851e49b68cf7a
+EBUILD plexus-container-default-1.0.ebuild 732 RMD160 d7602287e0a6115bc3a398184a58283c9dc1139b SHA1 d81d61691ff4fe0d9495ae525961e352cd7f9b25 SHA256 6d3024e82bcd1ea4c0da3edc1f5a04f240e0ed47c4eebbb46b4311adce4ff10a
+MISC ChangeLog 368 RMD160 d1fbca67c720ae84a58f4ea4e4785821c88b92f7 SHA1 d3caab51e3d89ceb8016528785532b72543a0b4e SHA256 585cb6d63719c8b3fee9d7d64d7d2d823aecd952921e28c7e8cd2befdf4d7a06
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
